cmake_minimum_required(VERSION 3.5)
project(asmjit_perf CXX)
find_package(asmjit REQUIRED)
add_library(asmjit_perf jitdump.cpp jitperf.cpp)
target_link_libraries(asmjit_perf asmjit::asmjit)
set_target_properties(asmjit_perf PROPERTIES PUBLIC_HEADER "jitperf.h;jitdump.h")
install(TARGETS asmjit_perf)
